--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/h5bp/html5-boilerplate.git"
+    "url": "git+https://github.com/h5bp/html5-boilerplate.git"
   },
   "bugs": {
     "url": "https://github.com/h5bp/html5-boilerplate/issues"
@@ -19,7 +19,8 @@
   "scripts": {
     "build": "gulp build",
     "prettier": "prettier --write ./**/*.{js,json,md,mjs,yml}",
-    "test": "gulp archive && mocha --reporter spec --timeout 5000"
+    "test": "gulp archive && mocha --reporter spec --timeout 5000",
+    "start": "http-server"
   },
   "devDependencies": {
     "archiver": "^7.0.1",
@@ -33,6 +34,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-header": "^2.0.9",
     "gulp-rename": "^2.0.0",
+    "http-server": "^14.1.1",
     "main.css": "3.0.0",
     "mocha": "^10.7.3",
     "prettier": "3.3.3",
@@ -56,5 +58,14 @@
     "package.json",
     "dist/",
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "http": "^0.0.1-security"
+  },
+  "main": ".eslintrc.js",
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "author": ""
 }
